--- a/_sass/minimal-light-no-dark-mode.scss
+++ b/_sass/minimal-light-no-dark-mode.scss
@@ -82,7 +82,7 @@
   background-color:#000}
 
 email {
-    font-size: 14px;
+    font-size: 16px;
     font-family: "Ubuntu Mono";
 }
 
@@ -169,7 +169,7 @@ papertitle {
 
       .image.avatar img {
         border-radius: 100%;
-        width: 45%;
+        width: 100%;
         padding: 20px;
         // border: 1px solid #ddd;
         // padding: 3px;
@@ -184,7 +184,7 @@ papertitle {
 h3, h4, h5, h6 {
   font-weight: 600;
   color:#043361;
-  margin:0 0 20px;
+  margin:0 0 0px;
 }
 
 h1 {
@@ -201,7 +201,8 @@ h2 {
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+  margin:0 0 0px;
+  font-size: 110%;
 }
 
 h1, h2, h3 {
@@ -209,7 +210,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size:28px;
+  font-size:35px;
 }
 
 a {
@@ -424,6 +425,13 @@ footer {
         width: 117px;
         padding:20px;
       }
+
+    .image.school_logo {
+        border-radius: 0%;
+        width: 117px;
+        padding:20px;
+      }
+  
   #head1o2 {
     visibility: hidden;
   }
